--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,202 @@
-@using FactoryApp.Views.Shared.Pages
+@using Factory.Views.Shared.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
   Layout = "_Layout";
 }
 
-<component type="typeof(IndexPage)" render-mode="ServerPrerendered" />
+@using Factory.Models;
+
+<div class="form">
+  <div class="machines">
+    <h2>@Html.ActionLink("Machines", "Index", "Machines") | @Html.ActionLink("New Machine", "Create", "Machines")</h2>
+
+    @if (@Model.Count == 0)
+    {
+      <h3>No machines have been added yet!</h3>
+    } 
+
+    <ul>
+      @foreach(Machine machine in ViewBag.Machine)
+      {
+        <p>@Html.ActionLink($"{machine.Name}", "Details", "Machines", new { id = machine.MachineId })</p>
+      }
+    </ul>  
+  </div>
+
+
+  <div class="engineers">
+    <h2>@Html.ActionLink("Engineers", "Index", "Engineers") | @Html.ActionLink("New Engineer", "Create", "Engineers")</h2>
+
+    @if (@Model.Count == 0)
+    {
+      <h3>No engineers have been added yet!</h3>
+    } 
+
+    <ul>
+      @foreach (Engineer engineer in ViewBag.Engineer)
+      {
+        <p>@Html.ActionLink($"{engineer.Name}", "Details", "Engineers", new { id = engineer.EngineerId })</p>
+      } 
+    </ul>  
+  </div>
+</div>
+@{
+  Layout = "_Layout";
+}
+
+@using Factory.Models;
+
+<div class="form">
+  <div class="machines">
+    <h2>@Html.ActionLink("Machines", "Index", "Machines") | @Html.ActionLink("New Machine", "Create", "Machines")</h2>
+
+    @if (@Model.Count == 0)
+    {
+      <h3>No machines have been added yet!</h3>
+    } 
+
+    <ul>
+      @foreach(Machine machine in ViewBag.Machine)
+      {
+        <p>@Html.ActionLink($"{machine.Name}", "Details", "Machines", new { id = machine.MachineId })</p>
+      }
+    </ul>  
+  </div>
+
+
+  <div class="engineers">
+    <h2>@Html.ActionLink("Engineers", "Index", "Engineers") | @Html.ActionLink("New Engineer", "Create", "Engineers")</h2>
+
+    @if (@Model.Count == 0)
+    {
+      <h3>No engineers have been added yet!</h3>
+    } 
+
+    <ul>
+      @foreach (Engineer engineer in ViewBag.Engineer)
+      {
+        <p>@Html.ActionLink($"{engineer.Name}", "Details", "Engineers", new { id = engineer.EngineerId })</p>
+      } 
+    </ul>  
+  </div>
+</div>
+@{
+  Layout = "_Layout";
+}
+
+@using Factory.Models;
+
+<div class="form">
+  <div class="machines">
+    <h2>@Html.ActionLink("Machines", "Index", "Machines") | @Html.ActionLink("New Machine", "Create", "Machines")</h2>
+
+    @if (@Model.Count == 0)
+    {
+      <h3>No machines have been added yet!</h3>
+    } 
+
+    <ul>
+      @foreach(Machine machine in ViewBag.Machine)
+      {
+        <p>@Html.ActionLink($"{machine.Name}", "Details", "Machines", new { id = machine.MachineId })</p>
+      }
+    </ul>  
+  </div>
+
+
+  <div class="engineers">
+    <h2>@Html.ActionLink("Engineers", "Index", "Engineers") | @Html.ActionLink("New Engineer", "Create", "Engineers")</h2>
+
+    @if (@Model.Count == 0)
+    {
+      <h3>No engineers have been added yet!</h3>
+    } 
+
+    <ul>
+      @foreach (Engineer engineer in ViewBag.Engineer)
+      {
+        <p>@Html.ActionLink($"{engineer.Name}", "Details", "Engineers", new { id = engineer.EngineerId })</p>
+      } 
+    </ul>  
+  </div>
+</div>
+@{
+  Layout = "_Layout";
+}
+
+@using Factory.Models;
+
+<div class="form">
+  <div class="machines">
+    <h2>@Html.ActionLink("Machines", "Index", "Machines") | @Html.ActionLink("New Machine", "Create", "Machines")</h2>
+
+    @if (@Model.Count == 0)
+    {
+      <h3>No machines have been added yet!</h3>
+    } 
+
+    <ul>
+      @foreach(Machine machine in ViewBag.Machine)
+      {
+        <p>@Html.ActionLink($"{machine.Name}", "Details", "Machines", new { id = machine.MachineId })</p>
+      }
+    </ul>  
+  </div>
+
+
+  <div class="engineers">
+    <h2>@Html.ActionLink("Engineers", "Index", "Engineers") | @Html.ActionLink("New Engineer", "Create", "Engineers")</h2>
+
+    @if (@Model.Count == 0)
+    {
+      <h3>No engineers have been added yet!</h3>
+    } 
+
+    <ul>
+      @foreach (Engineer engineer in ViewBag.Engineer)
+      {
+        <p>@Html.ActionLink($"{engineer.Name}", "Details", "Engineers", new { id = engineer.EngineerId })</p>
+      } 
+    </ul>  
+  </div>
+</div>
+@{
+  Layout = "_Layout";
+}
+
+@using Factory.Models;
+
+<div class="form">
+  <div class="machines">
+    <h2>@Html.ActionLink("Machines", "Index", "Machines") | @Html.ActionLink("New Machine", "Create", "Machines")</h2>
+
+    @if (@Model.Count == 0)
+    {
+      <h3>No machines have been added yet!</h3>
+    } 
+
+    <ul>
+      @foreach(Machine machine in ViewBag.Machine)
+      {
+        <p>@Html.ActionLink($"{machine.Name}", "Details", "Machines", new { id = machine.MachineId })</p>
+      }
+    </ul>  
+  </div>
+
+
+  <div class="engineers">
+    <h2>@Html.ActionLink("Engineers", "Index", "Engineers") | @Html.ActionLink("New Engineer", "Create", "Engineers")</h2>
+
+    @if (@Model.Count == 0)
+    {
+      <h3>No engineers have been added yet!</h3>
+    } 
+
+    <ul>
+      @foreach (Engineer engineer in ViewBag.Engineer)
+      {
+        <p>@Html.ActionLink($"{engineer.Name}", "Details", "Engineers", new { id = engineer.EngineerId })</p>
+      } 
+    </ul>  
+  </div>
+</div>
