continue to attempt to squash bugs

--- a/Views/Machines/Edit.cshtml
+++ b/Views/Machines/Edit.cshtml
@@ -2,22 +2,22 @@
   Layout = "_Layout";
 }
 
-@model Factory.Models.Engineer
+@model Factory.Models.Machine
 
 <div class="form">
   <h2>Edit</h2>
 
-  <h4>Update Engineer Details: @Html.DisplayFor(model => model.Name)</h4>
+  <h4>Update Machine Details: @Html.DisplayFor(model => model.Name)</h4>
 
   @using (Html.BeginForm())
   {
-    @Html.HiddenFor(model => model.EngineerId)
+    @Html.HiddenFor(model => model.MachineId)
 
     @Html.LabelFor(model => model.Name)
     @Html.EditorFor(model => model.Name)
 
-    @Html.Label("Select Machine")
-    @Html.DropDownList("MachineId")
+    @Html.Label("Select Engineer")
+    @Html.DropDownList("EngineerId")
 
     <input type="submit" value="Save" />
   }
