--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,10 +1,10 @@
-@using Factory.Views.Shared.Pages
+@using Factory.Models;
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
   Layout = "_Layout";
 }
 
-@using Factory.Models;
 
 <div class="form">
   <div class="machines">
@@ -44,7 +44,45 @@
   Layout = "_Layout";
 }
 
-@using Factory.Models;
+<div class="form">
+  <div class="machines">
+    <h2>@Html.ActionLink("Machines", "Index", "Machines") | @Html.ActionLink("New Machine", "Create", "Machines")</h2>
+
+    @if (@Model.Count == 0)
+    {
+      <h3>No machines have been added yet!</h3>
+    } 
+
+    <ul>
+      @foreach(Machine machine in ViewBag.Machine)
+      {
+        <p>@Html.ActionLink($"{machine.Name}", "Details", "Machines", new { id = machine.MachineId })</p>
+      }
+    </ul>  
+  </div>
+
+
+  <div class="engineers">
+    <h2>@Html.ActionLink("Engineers", "Index", "Engineers") | @Html.ActionLink("New Engineer", "Create", "Engineers")</h2>
+
+    @if (@Model.Count == 0)
+    {
+      <h3>No engineers have been added yet!</h3>
+    } 
+
+    <ul>
+      @foreach (Engineer engineer in ViewBag.Engineer)
+      {
+        <p>@Html.ActionLink($"{engineer.Name}", "Details", "Engineers", new { id = engineer.EngineerId })</p>
+      } 
+    </ul>  
+  </div>
+</div>
+@{
+  Layout = "_Layout";
+}
+
+
 
 <div class="form">
   <div class="machines">
@@ -84,7 +122,7 @@
   Layout = "_Layout";
 }
 
-@using Factory.Models;
+
 
 <div class="form">
   <div class="machines">
@@ -124,7 +162,7 @@
   Layout = "_Layout";
 }
 
-@using Factory.Models;
+
 
 <div class="form">
   <div class="machines">
@@ -143,47 +181,7 @@
     </ul>  
   </div>
 
-
-  <div class="engineers">
-    <h2>@Html.ActionLink("Engineers", "Index", "Engineers") | @Html.ActionLink("New Engineer", "Create", "Engineers")</h2>
-
-    @if (@Model.Count == 0)
-    {
-      <h3>No engineers have been added yet!</h3>
-    } 
-
-    <ul>
-      @foreach (Engineer engineer in ViewBag.Engineer)
-      {
-        <p>@Html.ActionLink($"{engineer.Name}", "Details", "Engineers", new { id = engineer.EngineerId })</p>
-      } 
-    </ul>  
-  </div>
-</div>
-@{
-  Layout = "_Layout";
-}
-
-@using Factory.Models;
-
 <div class="form">
-  <div class="machines">
-    <h2>@Html.ActionLink("Machines", "Index", "Machines") | @Html.ActionLink("New Machine", "Create", "Machines")</h2>
-
-    @if (@Model.Count == 0)
-    {
-      <h3>No machines have been added yet!</h3>
-    } 
-
-    <ul>
-      @foreach(Machine machine in ViewBag.Machine)
-      {
-        <p>@Html.ActionLink($"{machine.Name}", "Details", "Machines", new { id = machine.MachineId })</p>
-      }
-    </ul>  
-  </div>
-
-
   <div class="engineers">
     <h2>@Html.ActionLink("Engineers", "Index", "Engineers") | @Html.ActionLink("New Engineer", "Create", "Engineers")</h2>
 
