--- a/Views/Machines/Delete.cshtml
+++ b/Views/Machines/Delete.cshtml
@@ -2,10 +2,10 @@
   Layout = "_Layout";
 }
 
-@model Factory.Models.Engineer
+@model Factory.Models.Machine
 
 <div class="form">
-  <h2>Deletion of this Engineer will be permanant:</h2>
+  <h2>Deletion is permanant</h2>
 
   @Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)
   @using (Html.BeginForm())
