updated all files looking for the error code 134

--- a/Views/Engineers/Details.cshtml
+++ b/Views/Engineers/Details.cshtml
@@ -10,7 +10,7 @@
 
   @if(@Model.JoinEntities.Count == 0)
   {
-    <p>Engineer is not listed on any machines</p>
+    <p>Engineer is not listed</p>
   }
   else
   {
